--- a/index.html
+++ b/index.html
@@ -155,5 +155,6 @@
 </section>
 
 <footer>
-    &copy; 2026 My PC Builds | <a href="https://www.facebook.com/YourPage" target="_blank" style="color:#586548;">Facebook</a>
+    &copy; 2026 My PC Builds | <a href="https://www.facebook.com/YourPage" target="_blank" style="color:#CEDFD4;">Facebook</a>
+
 </footer>
